update genre
